Correzione dei nomi dei path
